--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#f41707</color>
+    <color name="colorPrimaryDark">#41f40b22</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
