--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -4,76 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     tools:context="com.engima.mapps.enigma.GamePage"
-    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="370dp"
-        android:layout_height="318dp"
-        android:id="@+id/constraintLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="11dp"
-        app:layout_constraintHorizontal_bias="1.0">
-
-    </android.support.constraint.ConstraintLayout>
 
     <EditText
         android:id="@+id/n1"
-        android:layout_width="71dp"
-        android:layout_height="51dp"
-        android:ems="10"
-        android:maxLength="1"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:digits="123456789"
+        android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.514" />
+        android:textColor="#ffffff"
+        android:maxLength="1"
+        android:layout_marginStart="34dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/n2"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/n2"
-        android:layout_width="66dp"
-        android:layout_height="50dp"
-        android:ems="10"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:digits="123456789"
+        android:ems="10"
         android:inputType="number"
         android:maxLength="1"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintRight_toLeftOf="@+id/n3"
-        app:layout_constraintLeft_toRightOf="@+id/n1"
-        app:layout_constraintVertical_bias="0.516" />
+        android:textColor="#ffffff"
+        android:layout_marginStart="85dp"
+        android:layout_marginEnd="87dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/n3"
+        android:layout_marginTop="75dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/n1" />
 
     <EditText
         android:id="@+id/n3"
-        android:layout_width="74dp"
-        android:layout_height="48dp"
+        android:layout_width="59dp"
+        android:layout_height="59dp"
         android:digits="123456789"
         android:ems="10"
-        android:maxLength="1"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.502"
-        app:layout_constraintRight_toLeftOf="@+id/n4"
-        app:layout_constraintLeft_toRightOf="@+id/n2" />
+        android:maxLength="1"
+        android:textColor="#ffffff"
+        android:layout_marginEnd="118dp"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/n2"
+        tools:layout_constraintBaseline_creator="1" />
 
     <EditText
         android:id="@+id/n4"
-        android:layout_width="75dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginStart="29dp"
         android:digits="123456789"
         android:ems="10"
         android:inputType="number"
         android:maxLength="1"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        android:textColor="#ffffff"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.948" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/n3"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toRightOf="@+id/n3" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -86,19 +88,22 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="336dp"
+        android:layout_width="0dp"
         android:layout_height="69dp"
         android:text="Player 1 Set a four digit number"
         android:textAlignment="center"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintHorizontal_bias="0.524"
-        app:layout_constraintLeft_toRightOf="@+id/constraintLayout"
-        app:layout_constraintRight_toLeftOf="@+id/constraintLayout"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.765" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="40dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/go2"
@@ -106,12 +111,14 @@
         android:layout_height="67dp"
         android:onClick="gotogamepage2"
         android:text="Done"
+
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.565" />
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="46dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
